[project]
name = "delete_copies"
version = "0.1.0"
authors = [
  { name="Vijay CN" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vijay2249/stress-relief"
Issues = "https://github.com/vijay2249/stress-relief/issues"